Fixed booking box, but it does not fit perfectly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,19 +240,19 @@ padding-bottom: 10px;
 .contactcontainer {
   display: flex;
   flex-direction: column;
-  font-family: "Play", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   justify-content: center;
-  max-width: 1000px;
+  max-width: 800px;
   height: 1000px;
   color: white;
   background-color: grey;
   align-items: center;
-  margin: 150px;
+  margin: 30px 350px 30px; 350px;
 }
 
 .contactcontainer p {
   margin: 20px;
-  max-width: 800px;
+  max-width: 700px;
   width: 100%;
 
 }
@@ -269,6 +269,8 @@ input[text=text] {
   padding: 12px 10px;
   display: flex;
   width: 100%;
+  max-width: 700px;
+  align-items: center;
   border-radius: 7px;
   display: flex;
   box-sizing: border-box;
